--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
+    "axios": "^0.23.0",
     "bootstrap": "^4.6.0",
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
+    "moment": "^2.29.1",
     "prettier": "^2.2.1",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.36.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
