--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "server": "nodemon index.js",
-    "client": "cd .. && npm run start",
+    "client": "cd ../frontend && npm run start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
