--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
     "jest": "^26.6.0",
     "prettier": "^2.2.1"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000/"
 }
