--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
+    "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
