--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "chart.js": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "node-html-parser": "^5.1.0",
+    "react-html-parser": "^2.0.2"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
