--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "chart.js": "^3.6.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "react-bootstrap": "^2.0.2"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
