fixed some update functionality for workouts and made the createExercise component look nicer

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
     "node-html-parser": "^5.1.0",
-    "react-html-parser": "^2.0.2"
+    "react-html-parser": "^2.0.2",
+    "react-loader-spinner": "^4.0.0"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
